# fonteditor

./: .gitignore  BROWSER_AUTOMATION.md  CLOUDFLARE_WORKER_SETUP.md  COMPILE_BUTTON.md  DEPLOYMENT.md  DIRECT_PYTHON_RUST_INTEGRATION.md  FONTC_WASM_BUILD.md  FONT_COMPILATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING_COMPILATION.md  build-fontc-wasm.sh  cloudflare-worker.js  index.html  names.txt  serve-with-cors.py  test-compile-python.py  test-compile.js
.github/workflows/: deploy.yml
babelfont-fontc-build/: Cargo.toml
babelfont-fontc-build/src/: lib.rs
css/: style.css
js/: file-browser.js  fontc-worker.js  fonteditor.js  pyodide-official-console.js  python-console-new.js  python-console.js  resizer.js
test-compiler/: 1-export-to-json.py  2-compile-to-ttf.js  Fustat.babelfont.json  README.md  compile-font.sh
test-compiler/Fustat.babelfont/: features.fea  glyphs.json  info.json  names.json
wasm-dist/: fontc_web.d.ts  fontc_web.js
webapp/: _headers  anthropic-proxy.py  coi-serviceworker.js  index.html  test-shared-buffer.html
webapp/css/: style.css
webapp/js/: ai-assistant.js  cache-manager.js  compile-button.js  file-browser.js  font-compilation.js  font-dropdown.js  fontc-worker.js  fonteditor.js  keyboard-navigation.js  loading-animation.js  matplotlib-handler.js  memory-monitor.js  pyodide-official-console.js  python-execution-wrapper.js  python-ui-sync.js  resizer.js  save-button.js  script-editor.js  sound-preloader.js  view-settings.js
webapp/py/: fonteditor.py
webapp/wasm-dist/: babelfont_fontc_web.d.ts  package.json  (+4 more)
(+1017 files in other folders)
